--- a/PartTwo.ipynb
+++ b/PartTwo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "be096ff5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b579b9cd",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "acbe1f6e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8084, 8)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -264,7 +271,7 @@
        "[8084 rows x 8 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,10 +284,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5d0bac56",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8084, 8)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#2a\n",
     "df.shape"
@@ -288,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "8d8b8595",
    "metadata": {},
    "outputs": [],
@@ -299,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "2de4c239",
    "metadata": {},
    "outputs": [],
@@ -326,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "0231e389",
    "metadata": {},
    "outputs": [
@@ -352,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "3d0db6a5",
    "metadata": {},
    "outputs": [],
@@ -364,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f93e8ff9",
    "metadata": {},
    "outputs": [],
@@ -376,13 +394,12 @@
     "    svm = SVC(kernel='linear', random_state=26)\n",
     "\n",
     "    #Training models\n",
-    "    print(\"Training Random Forest model\")\n",
+    "    print(\"Training Random Forest model \\n\")\n",
     "    random_forest.fit(X_train, y_train)\n",
-    "    print(\"\\n\")\n",
-    "    print(\"Training SVM model\")\n",
+    "    \n",
+    "    print(\"Training SVM model \\n\")\n",
     "    svm.fit(X_train, y_train)\n",
-    "    print(\"\\n\")\n",
-    "\n",
+    "    \n",
     "    #predictions\n",
     "    random_forest_pred = random_forest.predict(X_test)\n",
     "    svm_pred = svm.predict(X_test)\n",
@@ -413,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "afd26466",
    "metadata": {},
    "outputs": [
@@ -421,9 +438,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Random Forest model\n",
-      "Training SVM model\n",
-      "Random Forest Model\n",
+      "Training Random Forest model \n",
+      "\n",
+      "Training SVM model \n",
+      "\n",
+      "Random Forest Model:\n",
       "Macro-average f1 score: 0.45469001950616234\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
@@ -439,7 +458,7 @@
       "\n",
       "\n",
       "\n",
-      "SVM Model\n",
+      "SVM Model:\n",
       "Macro-average f1 score: 0.5933446121140653\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
@@ -473,7 +492,7 @@
        "{'Random Forest': 0.45469001950616234, 'SVM': 0.5933446121140653}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "a32639ca",
    "metadata": {},
    "outputs": [
@@ -493,9 +512,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Random Forest model\n",
-      "Training SVM model\n",
-      "Random Forest Model\n",
+      "Training Random Forest model \n",
+      "\n",
+      "Training SVM model \n",
+      "\n",
+      "Random Forest Model:\n",
       "Macro-average f1 score: 0.47930475175651455\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
@@ -511,7 +532,7 @@
       "\n",
       "\n",
       "\n",
-      "SVM Model\n",
+      "SVM Model:\n",
       "Macro-average f1 score: 0.5854220473255666\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
@@ -545,7 +566,7 @@
        "{'Random Forest': 0.47930475175651455, 'SVM': 0.5854220473255666}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "91d6162e",
    "metadata": {},
    "outputs": [],
@@ -593,27 +614,32 @@
     "    \n",
     "    tokens = []\n",
     "    for token in doc:\n",
-    "        if not(token.is_space or token.like_num or token.is_stop):\n",
-    "             if token.pos_ in [\"NOUN\", \"VERB\", \"ADJ\", \"ADV\"]:\n",
-    "                  if token.is_alpha:\n",
-    "                      tokens.append(token.lemma_.lower())\n",
+    "        #if not(token.is_space or token.like_num or token.is_stop):\n",
+    "             #if token.pos_ in [\"NOUN\", \"VERB\", \"ADJ\", \"ADV\",\"\"]:\n",
+    "        if token.is_alpha:\n",
+    "            tokens.append(token.lemma_.lower())\n",
     "    return tokens\n",
     "\n",
     "def Tfidfvectorizer_customtokeniser_split_data(df, ngram:str):\n",
     "    X = df[\"speech\"]\n",
     "    y = df[\"party\"]\n",
-    "    print(\"Running TfidfVectorizer\")\n",
+    "\n",
+    "    print(\"Starting TfidfVectorizer \\n\")\n",
+    "    \n",
     "    if ngram == \"3-gram\":\n",
-    "        print(\"Selected uni-gram, bi-gram and tri-gram \\n\")\n",
-    "        vectorizer = TfidfVectorizer(max_features = 3000, ngram_range=(1,3),tokenizer=custom_tokenizer,min_df=20,max_df=0.7)\n",
+    "        print(\"Using n-gram range : (1,3) - uni-gram, bi-gram and tri-gram \\n\")\n",
+    "        vectorizer = TfidfVectorizer(max_features=3000, ngram_range=(1,3),tokenizer=custom_tokenizer,min_df=20,max_df=0.7)\n",
     "    else:\n",
-    "        print(\"Selected default n-gram \\n\")\n",
+    "        print(\"Using default n-gram range : (1,1) \\n\")\n",
     "        vectorizer = TfidfVectorizer(max_features=3000, tokenizer=custom_tokenizer, min_df=20, max_df=0.7 )\n",
+    "\n",
+    "    print(\"Vectorizing data with custom tokenizer \\n\")\n",
     "    X_vector = vectorizer.fit_transform(X)\n",
     "    print(\"Vectorization completed \\n\")\n",
     "\n",
-    "    print(\"Splitting the data into training and testing \\n\")\n",
+    "    print(\"Splitting the data into training and testing sets \\n\")\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_vector, y, test_size=0.2, stratify=y, random_state=26)\n",
+    "    print(\"Data Split completed \\n\")\n",
     "    return X_train, X_test, y_train, y_test"
    ]
   },
@@ -623,6 +649,18 @@
    "id": "fa5113fb",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting TfidfVectorizer \n",
+      "\n",
+      "Using default n-gram range : (1,1) \n",
+      "\n",
+      "Vectorizing data with custom tokenizer \n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -635,9 +673,86 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Random Forest model\n",
-      "Training SVM model\n",
-      "Random Forest Model\n",
+      "Vectorization completed \n",
+      "\n",
+      "Splitting the data into training and testing sets \n",
+      "\n",
+      "Data Split completed \n",
+      "\n",
+      "Training Random Forest model \n",
+      "\n",
+      "Training SVM model \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\metrics\\_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "C:\\Users\\ramya\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\sklearn\\feature_extraction\\text.py:517: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Model:\n",
+      "Macro-average f1 score: 0.38093172208127923\n",
+      "Classification Report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.69      0.98      0.81       964\n",
+      "                 Labour       0.71      0.37      0.49       463\n",
+      "       Liberal Democrat       0.00      0.00      0.00        54\n",
+      "Scottish National Party       0.82      0.13      0.23       136\n",
+      "\n",
+      "               accuracy                           0.70      1617\n",
+      "              macro avg       0.56      0.37      0.38      1617\n",
+      "           weighted avg       0.69      0.70      0.64      1617\n",
+      "\n",
+      "\n",
+      "\n",
+      "SVM Model:\n",
+      "Macro-average f1 score: 0.5648199900445738\n",
+      "Classification Report:\n",
+      "                         precision    recall  f1-score   support\n",
+      "\n",
+      "           Conservative       0.81      0.93      0.86       964\n",
+      "                 Labour       0.73      0.67      0.70       463\n",
+      "       Liberal Democrat       1.00      0.06      0.11        54\n",
+      "Scottish National Party       0.79      0.47      0.59       136\n",
+      "\n",
+      "               accuracy                           0.79      1617\n",
+      "              macro avg       0.83      0.53      0.56      1617\n",
+      "           weighted avg       0.79      0.79      0.77      1617\n",
+      "\n",
+      "\n",
+      "\n",
+      "For uni-gram, bi-gram and tri-gram\n",
+      "Starting TfidfVectorizer \n",
+      "\n",
+      "Using n-gram range : (1,3) - uni-gram, bi-gram and tri-gram \n",
+      "\n",
+      "Vectorizing data with custom tokenizer \n",
+      "\n",
+      "Vectorization completed \n",
+      "\n",
+      "Splitting the data into training and testing sets \n",
+      "\n",
+      "Data Split completed \n",
+      "\n",
+      "Training Random Forest model \n",
+      "\n",
+      "Training SVM model \n",
+      "\n",
+      "Random Forest Model:\n",
       "Macro-average f1 score: 0.4333299494722551\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
@@ -653,7 +768,7 @@
       "\n",
       "\n",
       "\n",
-      "SVM Model\n",
+      "SVM Model:\n",
       "Macro-average f1 score: 0.5733794251858857\n",
       "Classification Report:\n",
       "                         precision    recall  f1-score   support\n",
@@ -687,18 +802,28 @@
        "{'Random Forest': 0.4333299494722551, 'SVM': 0.5733794251858857}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import time \n",
+    "start_time = time.time()\n",
     "X_train, X_test, y_train, y_test = Tfidfvectorizer_customtokeniser_split_data(df, \"default\")\n",
     "Random_Forest_and_SVM(X_train, X_test, y_train, y_test)\n",
+    "end_time = time.time()\n",
+    "duration = end_time - start_time\n",
+    "print(f\"Duration for default n-gram: {duration}\")\n",
     "print(\"\\n\")\n",
+    "\n",
+    "start_time = time.time()\n",
     "print(\"For uni-gram, bi-gram and tri-gram\")\n",
     "X1_train, X1_test, y1_train, y1_test = Tfidfvectorizer_customtokeniser_split_data(df, \"3-gram\")\n",
-    "Random_Forest_and_SVM(X1_train, X1_test, y1_train, y1_test)\n"
+    "Random_Forest_and_SVM(X1_train, X1_test, y1_train, y1_test)\n",
+    "end_time = time.time()\n",
+    "duration = end_time - start_time\n",
+    "print(f\"Duration for 3-gram: {duration}\")\n"
    ]
   }
  ],
